```mermaid
erDiagram
    %% Shopify AI Marketing Suite - データベース ER図 (概要版)
    %% 作成日: 2025-07-27
    %% 作成者: AIアシスタントケンジ
    
    %% ストアマスター（マルチストア対応の中核）
    Stores {
        int Id PK "主キー"
        string Name "ストア名"
        string Domain "ドメイン"
        string ShopifyShopId "Shopify店舗ID"
        datetime CreatedAt "作成日時"
        datetime UpdatedAt "更新日時"
    }
    
    %% 顧客マスター（匿名化済み）
    Customers {
        int Id PK "主キー"
        int StoreId FK "ストアID"
        string ShopifyCustomerId "Shopify顧客ID"
        string FirstName "名"
        string LastName "姓"
        string Email "メールアドレス"
        string Phone "電話番号"
        string City "市区町村"
        string ProvinceCode "都道府県コード"
        string CountryCode "国コード"
        bool AcceptsEmailMarketing "メール配信許可"
        bool AcceptsSMSMarketing "SMS配信許可"
        decimal TotalSpent "累計購入額"
        int TotalOrders "累計注文数"
        string CustomerSegment "顧客セグメント"
        datetime CreatedAt "作成日時"
        datetime UpdatedAt "更新日時"
    }
    
    %% 商品マスター
    Products {
        int Id PK "主キー"
        int StoreId FK "ストアID"
        string Title "商品名"
        string Handle "商品ハンドル"
        string Description "商品説明"
        string Category "カテゴリ"
        string Vendor "ベンダー"
        string ProductType "商品タイプ"
        int InventoryQuantity "在庫数"
        datetime CreatedAt "作成日時"
        datetime UpdatedAt "更新日時"
    }
    
    %% 商品バリアント
    ProductVariants {
        int Id PK "主キー"
        int ProductId FK "商品ID"
        string Sku "SKU"
        decimal Price "価格"
        decimal CompareAtPrice "比較価格"
        int InventoryQuantity "在庫数"
        string Option1Name "オプション1名"
        string Option1Value "オプション1値"
        string Option2Name "オプション2名"  
        string Option2Value "オプション2値"
        string Option3Name "オプション3名"
        string Option3Value "オプション3値"
        string Barcode "バーコード"
        decimal Weight "重量"
        string WeightUnit "重量単位"
        bool RequiresShipping "配送要否"
        bool Taxable "課税対象"
        datetime CreatedAt "作成日時"
        datetime UpdatedAt "更新日時"
    }
    
    %% 注文（トランザクションデータ）
    Orders {
        int Id PK "主キー"
        int StoreId FK "ストアID"
        string OrderNumber UK "注文番号(ユニーク)"
        int CustomerId FK "顧客ID"
        decimal TotalPrice "合計金額(税込)"
        decimal SubtotalPrice "小計金額(税抜)"
        decimal TaxPrice "税額"
        string Currency "通貨"
        string Status "注文ステータス"
        string FinancialStatus "支払いステータス"
        datetime CreatedAt "注文日時"
        datetime UpdatedAt "更新日時"
    }
    
    %% 注文明細（スナップショット型の中核テーブル）
    OrderItems {
        int Id PK "主キー"
        int OrderId FK "注文ID"
        string ProductId "商品ID(参照用,NULL許可)"
        string ProductTitle "商品名(スナップショット)"
        string ProductHandle "商品ハンドル(スナップショット)"
        string ProductVendor "ベンダー(スナップショット)"
        string ProductType "商品タイプ(スナップショット)"
        string Sku "SKU(スナップショット)"
        string VariantTitle "バリアント名(スナップショット)"
        decimal Price "単価(スナップショット)"
        decimal CompareAtPrice "比較価格(スナップショット)"
        int Quantity "数量"
        decimal TotalPrice "小計"
        string Option1Name "オプション1名(スナップショット)"
        string Option1Value "オプション1値(スナップショット)"
        string Option2Name "オプション2名(スナップショット)"
        string Option2Value "オプション2値(スナップショット)"
        string Option3Name "オプション3名(スナップショット)"
        string Option3Value "オプション3値(スナップショット)"
        bool RequiresShipping "配送要否(スナップショット)"
        bool Taxable "課税対象(スナップショット)"
        datetime CreatedAt "作成日時"
        datetime UpdatedAt "更新日時"
    }
    
    %% ======================
    %% リレーションシップ定義
    %% ======================
    
    %% マルチストア対応の中核関係
    Stores ||--o{ Customers : "管理"
    Stores ||--o{ Products : "所有"
    Stores ||--o{ Orders : "受注"
    
    %% 顧客と注文の関係
    Customers ||--o{ Orders : "注文履歴"
    
    %% 商品とバリアントの関係
    Products ||--o{ ProductVariants : "バリアント展開"
    
    %% 注文と明細の関係（最重要）
    Orders ||--|{ OrderItems : "明細展開"
    
    %% 重要：OrderItemsと商品の関係（参照のみ、スナップショット設計）
    Products ||--o{ OrderItems : "参照(分析用,NULL許可)"
    ProductVariants ||--o{ OrderItems : "参照(分析用,NULL許可)"
```

**🎯 重要な設計ポイント**

1. **スナップショット設計の中核**
   - `OrderItems` は商品情報を完全にスナップショット保存
   - 商品マスター変更の影響を受けない取引履歴

2. **マルチストア対応**
   - 全マスターテーブルに `StoreId` でデータ分離
   - ストア削除は `NoAction` で慎重に対応

3. **参照整合性**
   - 必須関係: Orders ↔ Customers, Orders ↔ OrderItems
   - 任意関係: OrderItems → Products (分析用、NULL許可)

4. **削除ポリシー**
   - `Cascade`: 親削除時の子自動削除（Orders → OrderItems）
   - `NoAction`: 手動対応が必要（Stores関連）

**📊 分析クエリでの活用方針**
- 基本: `OrderItems` のスナップショットデータを使用
- 拡張: `ProductId` で現在の商品マスターと結合
- 期間: `Orders.CreatedAt` で時系列分析
- セグメント: `Customers` の属性で顧客分析